# afyaintel-agent-capstone

./: .env.example  .gitignore  AGENTS.md  CERTIFICATION_READINESS.md  CONTRIBUTING.md  FINAL_ACTIONS.md  LICENSE  PROFESSIONALIZATION_REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  RELEASE_NOTES.md  SECURITY.md  VERIFICATION_REPORT.md  VISION_2030.md
00-admin/: course-links.md  setup-checklist.md  setup-verification.md
01-day-1-introduction-vibe-coding/: codelab-progress.md  day-1-livestream-notes.md  day-1-notes.md  day-1-questions.md  whitepaper-notes.md
01-day-1-introduction-vibe-coding/afyaintel-mini-agent/: .dockerignore  Dockerfile  README.md  a2ui-dashboard.schema.json  a2ui_dashboard_payload.json  agent-card.json  api_examples.http  eval_cases.md  eval_report.json  eval_report.md  fhir_inventory_bundle.json  main.py  prompts.md  pyproject.toml  safety_rules.md  sample_stock.csv  server.py  tool_manifest.json
01-day-1-introduction-vibe-coding/afyaintel-mini-agent/afyaintel/: __init__.py  audit.py  cli.py  config.py  dashboard.py  data.py  domain.py  evaluation.py  fhir.py  forecasting.py  governance.py  language.py  model.py  nlp.py  orchestrator.py  research_tools.py  safety.py  sync.py  tools.py
01-day-1-introduction-vibe-coding/afyaintel-mini-agent/docs/: API.md  ARCHITECTURE.md
01-day-1-introduction-vibe-coding/afyaintel-mini-agent/tests/: test_agent.py
02-day-2-tools-interoperability/: README.md  afyaintel-tool-architecture.md  codelab-progress.md  completion-evidence-template.md  google-developer-knowledge-test-prompts.md  podcast-notes.md  (+2 more)
(+49 files in other folders)
