[project]
name = "afyaintel-mini-agent"
version = "1.0.0"
description = "Local-first bilingual health-facility operations agent with deterministic safety, evaluation, and deployment readiness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.0.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
